Fix Contact info alignment

--- a/styles/style-challenge-cv.css
+++ b/styles/style-challenge-cv.css
@@ -368,6 +368,10 @@ body{
         min-width: 30%;
     }
 
+    .infoWrapper{
+        align-items: flex-start;
+    }
+
     .sendBtn{
         width: 10rem;
         height: 4rem;
